--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,6 @@
+# 填写你的 OpenAI API Key
 OPENAI_API_KEY=sk-...
+# 填写你的 OpenAI API 地址
 OPENAI_API_BASE_URL=https://...
+# 填写你的 模型名称
+OPENAI_API_MODEL=ep-...
